--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <div id="root" class="body">
-        hello world
+        not rendered
+     <!-- <img src="./src/asset/burger.png" alt=""> -->
     </div>
 
     <script type="module" src="./App.js">
